feat: authentication layer added and update to docs
