# src/model/administrator.go
@@ -1,0 +1,8 @@
+package model
+
+type Administrator struct {
+	Id       string `json:"id"`
+	Email    string `json:"email"`
+	Forename string `json:"forename"`
+	Surname  string `json:"surname"`
+} // @name Administrator
