# src/model/error.go
@@ -1,0 +1,5 @@
+package model
+
+type ErrorResponse struct {
+	Message string `json:"message,omitempty"`
+} // @name ErrorResponse
